# cg

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/algorithms/: diameter.cpp
examples/exam/: CMakeLists.txt  exam_0102.cpp  exam_1801.cpp  exam_2401.cpp  exam_2401_2.cpp
examples/visibility_graph/: CMakeLists.txt  visibility_graph.cpp  visibility_graph.h
include/cg/exam/: exam_0102.h  exam_1801.h  exam_2401.h
include/cg/operations/intersection/: segment_segment.h
include/cg/primitives/: contour.h
include/cg/visualization/: viewer.h
src/visualization/: printer_impl.cpp
tests/: CMakeLists.txt  find_max.cpp  rasterize.cpp
